@@ -10,6 +10,7 @@ require('container');
 require('ember-metal');
 require('ember-runtime/core');
 require('ember-runtime/computed/reduce_computed_macros');
+require('ember-runtime/computed/computed_controller');
 require('ember-runtime/ext');
 require('ember-runtime/mixins');
 require('ember-runtime/system');
